--- a/miniprogram/src/pages/report/mobile.module.scss
+++ b/miniprogram/src/pages/report/mobile.module.scss
@@ -13,6 +13,10 @@
   padding: 24px 20px;
 }
 
+.photoWrap {
+  padding: 8px 20px 0;
+}
+
 .iconBtn {
   width: 36px;
   height: 36px;
